<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, MainActivity!</string>
	<string name="app_name">Wristband</string>
	<string name="greetingText">Any good shows tonight? Long-press to find out!</string>
	<string name="footer">WRISTBAND by Nimo is powered by SongKick and
		bandcamp.
</string>
	<string name="map">Get Map</string>
	<string name="mapcond">Map</string>
	<string name="about">About Wristband</string>
	<string name="aboutcond">About</string>
	<string name="websitest">Go to bandcamp site</string>
	<string name="bandcamp">More by this artist</string>
	<string name="bcdisclaimer">The term \'Bandcamp\' is a trademark of Bandcamp,
		Inc. This application uses the Bandcamp API but is not endorsed or
		certified by Bandcamp, Inc.</string>
	<string name="aboutMessage">Wristband uses the SongKick and Bandcamp APIs to
		help you discover shows happening in your area.  Menu icons by www.androidicons.com.</string>
	<string name="app_version">0.7.5 beta 4</string>
	<string name="copyright">Copyright 2012 Allan Pichardo.</string>
	<string name="cityhint">Your City</string>
	<string name="datelabel">Date:</string>
	<string name="searchbttnlabel">Search</string>
	<string name="wristbandyellow">#cecc00</string>
	<string name="yeller">#cecc00</string>
	<string name="black">#000000</string>
</resources>
