<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_height="wrap_content" android:layout_width="match_parent"
		android:layout_weight="0.2">
		<TextView android:id="@+id/textView3" android:text="@string/app_name"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_margin="10dip" android:typeface="serif"
			android:textSize="30dip" android:textColor="#fff"></TextView>
		<TextView android:id="@+id/textView4" android:text="@string/app_version"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_margin="10dip" android:typeface="serif"
			android:textStyle="italic" android:textColor="#fff"></TextView>
	</LinearLayout>
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content"
		android:layout_width="match_parent" android:background="#fff"
		android:layout_weight="0.1"></TableRow>
	<TextView android:id="@+id/textView1" android:text="@string/aboutMessage"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:typeface="serif" android:textSize="24dip"
		android:layout_margin="10dip" android:textStyle="bold"
		android:layout_weight="0.8" android:textColor="#fff"></TextView>
	<TextView android:id="@+id/textView2" android:text="@string/bcdisclaimer"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:textStyle="italic" android:typeface="serif" android:textSize="10dip"
		android:layout_margin="10dip" android:textColor="#fff"></TextView>
	<ImageView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/imageView1"
		android:src="@drawable/concertsbsk" android:layout_gravity="right"
		android:layout_margin="10dip"></ImageView>
	<TextView android:id="@+id/textView5" android:layout_weight="0.0" android:text="@string/copyright" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="8dip" android:typeface="monospace" android:textColor="#fff"></TextView>

</LinearLayout>
